--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Welcome to The Little Taco Shop!</h1>
     <ul>
         <li><a href="index.html">About LTS</a></li>
-        <li><a href="#">Our Menu</a></li>
+        <li><a href="#menu">Our Menu</a></li>
         <li><a href="hours.html">Store Hours</a></li>
         <li><a href="contact.html">Contact Us</a></li>
     </ul>
@@ -32,7 +32,7 @@
 
     <hr>
 
-    <h2>Our Menu</h2>
+    <h2 id="menu">Our Menu</h2>
     <table>
         <caption>Our Tacos</caption>
         <thead>
